--- a/app/src/main/res/layout/welcome_screen.xml
+++ b/app/src/main/res/layout/welcome_screen.xml
@@ -6,18 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".Welcome_screen"
     android:orientation="vertical"
-    android:background="#F54983">
+    android:background="#F8417F">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_gravity="center"
+        android:src="@drawable/ic_fitness_center_black_24dp" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
         android:text="Fitness Tracker"
-        android:textStyle="bold|italic"
+        android:textAlignment="center"
         android:textColor="#F5F8FC"
         android:textSize="50sp"
-        android:textAlignment="center"
-        android:layout_marginTop="400dp"
-        android:drawableTop="@drawable/ic_fitness_center_black_24dp"
-        />
+        android:textStyle="bold|italic" />
+
+
+
 </LinearLayout>
 
