--- a/app/src/main/res/layout/login_screen.xml
+++ b/app/src/main/res/layout/login_screen.xml
@@ -25,7 +25,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:textSize="25dp"
-        android:textColor="#060607"
+        android:textColor="#F3F3F7"
         android:background="@drawable/signupbutton"/>
        <TextView
         android:layout_width="match_parent"
@@ -41,12 +41,13 @@
         android:text="Login"
         android:textAlignment="center"
         android:layout_gravity="center"
-        android:textSize="20sp"
+        android:textSize="23sp"
         android:textAllCaps="false"
         android:background="@drawable/signupbutton"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:textColor="#F2F5F8"/>
 
 
-    
+
 </LinearLayout>
 
