--- a/app/src/main/res/drawable/loginbtn.xml
+++ b/app/src/main/res/drawable/loginbtn.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <solid android:color="#6F6B6B"/>
-    <corners android:radius="15dp"/>
-    <gradient android:startColor="#ffffff"
+    <corners android:radius="10dp"/>
+    <gradient android:startColor="#ADA1A1"
         android:endColor="#ffffff"/>
     <stroke android:color="#000000"/>
     <stroke android:width="1dp"/>
