--- a/app/src/main/res/drawable/profilepic.xml
+++ b/app/src/main/res/drawable/profilepic.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="#FAF7F7"/>
+    <solid android:color="#D1CACA"/>
     <corners android:radius="7dp"/>
 
 </shape>
