--- a/app/src/main/res/layout/health__info.xml
+++ b/app/src/main/res/layout/health__info.xml
@@ -6,10 +6,80 @@
     android:layout_height="match_parent"
     tools:context=".Health_Info"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:background="@mipmap/background02">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:drawableLeft="@drawable/ic_person_black02_24dp"
+        android:text="  Profile Details  "
+        android:textAlignment="center"
+        android:textColor="#EEECEC"
+        android:textSize="30sp"
+        android:textStyle="bold" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        />
+        android:text="   Enter the details to get personalized plan "
+        android:textSize="22sp"
+        android:textColor="#EEECE9"
+        android:textAlignment="center"
+        android:layout_marginTop="30dp"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="120dp"
+        android:background="@drawable/loginbuttons"
+        android:drawableLeft="@mipmap/heighticon"
+        android:padding="15dp"
+        android:text="Height                                           "
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textSize="18dp"
+        android:drawableRight="@mipmap/plusicon"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Weight                                            "
+        android:textSize="18sp"
+        android:textAllCaps="false"
+        android:background="@drawable/loginbuttons"
+        android:layout_marginTop="20dp"
+        android:padding="15dp"
+        android:drawableLeft="@mipmap/weighticon"
+        android:drawableRight="@mipmap/plusicon"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Date of Birth                                    "
+        android:textSize="18sp"
+        android:textAllCaps="false"
+        android:background="@drawable/loginbuttons"
+        android:layout_marginTop="20dp"
+        android:padding="12dp"
+        android:textAlignment="center"
+        android:drawableLeft="@drawable/ic_date_range_black_24dp"
+        android:drawableRight="@mipmap/plusicon"/>
+
+    <Button
+        android:id="@+id/bProfileNext"
+        android:layout_width="251dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="150dp"
+        android:layout_marginRight="50dp"
+        android:background="@drawable/signupbutton"
+        android:padding="10dp"
+        android:text="Next"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textColor="#FDFEFF"
+        android:textSize="20sp" />
+
+
 
 </LinearLayout>
