--- a/app/src/main/res/layout/login_account.xml
+++ b/app/src/main/res/layout/login_account.xml
@@ -5,80 +5,80 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Login_account"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@mipmap/background">
 
-<ImageView
-    android:layout_width="match_parent"
-    android:layout_height="200dp"
-    android:padding="10dp"
-    android:src="@drawable/ic_launcher_background"
-    />
+    <ImageView
+        android:layout_width="250dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center_horizontal"
+        android:padding="10dp"
+        android:src="@mipmap/logo" />
+
     <EditText
-        android:id="@+id/etUserId"
+        android:id="@+id/etEmailId"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="50dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginRight="10dp"
         android:background="@drawable/loginbuttons"
-        android:hint="Username"
+        android:drawableEnd="@drawable/ic_account_box_black_24dp"
+        android:drawableRight="@drawable/ic_lock_black_24dp"
+        android:hint="Email"
         android:imeOptions="actionNext"
         android:inputType="textEmailAddress"
         android:padding="15dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
         android:textSize="16sp" />
+
     <EditText
         android:id="@+id/etPassword"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:hint="Password"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10sp"
         android:background="@drawable/loginbuttons"
-        android:padding="15dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:textSize="16sp"
-        android:layout_marginTop="20dp"
+        android:drawableEnd="@drawable/ic_lock_black_24dp"
+        android:drawableRight="@drawable/ic_lock_black_24dp"
+        android:hint="Password"
+        android:imeOptions="actionDone"
         android:inputType="textPassword"
-        android:imeOptions="actionDone"/>
+        android:padding="15dp"
+        android:textSize="16sp" />
+
     <Button
-        android:id="@+id/bLogin"
-        android:layout_width="100dp"
-        android:layout_height="60dp"
+        android:id="@+id/bLoginToHealth"
+        android:layout_width="154dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/signupbutton"
         android:text="Login"
-        android:background="@drawable/loginbtn"
-        android:layout_gravity="center"
-        android:layout_marginTop="50dp"
-        android:textSize="25dp"
-        android:textColor="#041429"
-        />
-    <LinearLayout
+        android:textAllCaps="false"
+        android:textColor="#F9FAFC"
+        android:textSize="20dp"
+        android:padding="10dp"/>
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
+        android:text="Not a remember yet ?"
+        android:textColor="#9198A0"
+        android:textSize="18sp"
+        android:textAlignment="center"
+        android:layout_marginTop="170dp"/>
+
+    <Button
+        android:id="@+id/bSignupAgain"
+        android:layout_width="301dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:orientation="horizontal"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="60dp"
-        android:background="@drawable/google_back">
-
-        <ImageView
-            android:layout_width="60dp"
-            android:layout_height="match_parent"
-            android:src="@mipmap/google_image"
-            android:padding="10dp"
-            />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="Sign In with google"
-            android:layout_weight="1"
-            android:textSize="25dp"
-            android:textColor="#F1F3FC"
-            android:gravity="center"
-            android:background="#4357A5"
-            android:textStyle="bold"/>
-
-
-    </LinearLayout>
+        android:layout_marginTop="10dp"
+        android:background="@drawable/signupbutton"
+        android:padding="10dp"
+        android:text="Sign Up "
+        android:textAllCaps="false"
+        android:textColor="#F5FAFA"
+        android:textSize="20dp" />
 </LinearLayout>
 
