--- a/app/src/main/res/layout/login_screen.xml
+++ b/app/src/main/res/layout/login_screen.xml
@@ -5,47 +5,122 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Login_Screen"
-    android:orientation="vertical">
-    
+    android:orientation="vertical"
+    android:background="@mipmap/background">
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20sp"
+        android:layout_marginTop="20sp"
+        android:layout_marginRight="20sp">
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/viewPage"
+            android:layout_width="match_parent"
+            android:layout_height="250sp"
+            />
+
+        <LinearLayout
+            android:id="@+id/dots"
+            android:layout_width="match_parent"
+            android:layout_height="30sp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="7dp"
+            android:layout_gravity="bottom"
+            android:gravity="center|top"
+            android:orientation="horizontal">
+
+        </LinearLayout>
+
+    </FrameLayout>
+
+
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:text="     You need a fitness tracker account to continue"
         android:textAlignment="center"
-        android:textSize="25sp"
-        android:textColor="#08090A"
-        android:layout_marginTop="300dp"/>
+        android:textColor="#F4F7FA"
+        android:textSize="20sp" />
+
     <Button
         android:id="@+id/bSignup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Sign Up with Email"
-        android:textAllCaps="false"
-        android:padding="10dp"
+        android:layout_width="184dp"
+        android:layout_height="44dp"
         android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:textSize="25dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/signupbutton"
+        android:padding="10dp"
+        android:text="Sign Up "
+        android:textAllCaps="false"
         android:textColor="#F3F3F7"
-        android:background="@drawable/signupbutton"/>
-       <TextView
+        android:textSize="18dp" />
+    <!--
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:src="@mipmap/google_image" />
+    -->
+    <Button
+        android:id="@+id/bgoogle"
+        android:layout_width="match_parent"
+        android:layout_height="58dp"
+        android:layout_gravity="center"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginRight="60dp"
+        android:drawableLeft="@mipmap/google"
+        android:text="Sign in with Google"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textSize="18dp" />
+
+    <Button
+        android:id="@+id/bfacebook"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Already have an account?"
-        android:textSize="20sp"
+        android:layout_gravity="center"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginRight="60dp"
+        android:drawableLeft="@mipmap/facebook"
+        android:text="Sign in with facebook"
         android:textAlignment="center"
-        android:layout_marginTop="210dp"
-        android:textColor="#060D14"/>
-    <Button
+        android:textAllCaps="false"
+        android:textSize="18dp" />
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Login"
-        android:textAlignment="center"
-        android:layout_gravity="center"
-        android:textSize="23sp"
-        android:textAllCaps="false"
-        android:background="@drawable/signupbutton"
-        android:textStyle="bold"
-        android:textColor="#F2F5F8"/>
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="110dp"
+            android:layout_weight="1"
+            android:text="Already have an account?"
+            android:textColor="#9198A0"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/btnlogin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="15sp"
+            android:layout_marginTop="53dp"
+            android:text="Login"
+            android:textColor="#F2F5F8"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+
+
 
 
 
