--- a/app/src/main/res/layout/welcome_screen.xml
+++ b/app/src/main/res/layout/welcome_screen.xml
@@ -6,31 +6,46 @@
     android:layout_height="match_parent"
     tools:context=".Welcome_screen"
     android:orientation="vertical"
-    android:background="#F8417F">
+    android:background="@mipmap/splashscreenwithlogo">
 
-    <FrameLayout
-        android:layout_width="400dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center">
+ <!--  <LinearLayout
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:orientation="horizontal"
+       android:layout_marginTop="16sp">
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_fitness_center_black_24dp"/>
-    </FrameLayout>
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text=" Period"
+          android:textSize="20sp"
+          android:textColor="#000000"
+          android:layout_marginLeft="20sp"
+          android:textAlignment="center"
+          android:padding="10dp"
+          android:drawableLeft="@drawable/ic_brightness_1_black_24dp"/>
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text=" Fertile"
+          android:textSize="20sp"
+          android:textColor="#000000"
+          android:layout_marginLeft="20sp"
+          android:textAlignment="center"
+          android:padding="10dp"
+          android:drawableLeft="@drawable/ic_brightness2_1_black_24dp"/>
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="Ovulation"
+          android:textSize="20sp"
+          android:textColor="#000000"
+          android:layout_marginLeft="20sp"
+          android:textAlignment="center"
+          android:drawableLeft="@drawable/ic_brightness3_1_black_24dp"
+          android:padding="10dp"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
-        android:text="Fitness Tracker"
-        android:textAlignment="center"
-        android:textColor="#F5F8FC"
-        android:textSize="50sp"
-        android:textStyle="bold|italic" />
-
-
-
+   </LinearLayout>
+-->
 </LinearLayout>
 
