--- a/app/src/main/res/layout/tracking_info.xml
+++ b/app/src/main/res/layout/tracking_info.xml
@@ -2,13 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".Tracking_info"
     android:gravity="bottom"
     >
+
+    <FrameLayout
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="743dp"
+
+        >
+
+    </FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,18 +30,20 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_weight="1"
+            android:id="@+id/llCalender"
             android:layout_height="match_parent"
             android:gravity="center"
             android:weightSum="2"
             android:orientation="vertical">
 
             <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:padding="4dp"
-        android:src="@mipmap/calendericon"
-                android:layout_weight="0.8"/>
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="0.8"
+                android:padding="4dp"
+                android:src="@mipmap/calendericon" />
+            <!-- android:id="@+id/ivCalender"-->
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
