--- a/app/src/main/res/layout/tracking_info.xml
+++ b/app/src/main/res/layout/tracking_info.xml
@@ -12,8 +12,7 @@
     <FrameLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="743dp"
-
+        android:layout_height="match_parent"
         >
 
     </FrameLayout>
@@ -56,6 +55,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/llChart"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
