--- a/app/src/main/res/layout/personal_info.xml
+++ b/app/src/main/res/layout/personal_info.xml
@@ -11,24 +11,21 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile_image"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_gravity="center_horizontal"
-        android:src="@mipmap/sandy"
-        android:background="@drawable/profilepic"
-        android:textAlignment="center"
+        android:layout_width="216dp"
+        android:layout_height="172dp"
+        android:layout_gravity="center"
         android:layout_marginTop="18sp"
-        />
+        android:src="@mipmap/profilepic"
+        android:textAlignment="center" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Create an account"
         android:layout_gravity="center_horizontal"
         android:textAlignment="center"
-        android:textColor="#F2F5F1"
+        android:textColor="#9C9595"
         android:textStyle="bold"
         android:textSize="20dp"
-        android:layout_marginTop="5dp"
         />
     <LinearLayout
         android:layout_width="match_parent"
@@ -45,12 +42,12 @@
             android:drawableEnd="@drawable/ic_account_box_black_24dp"
             android:padding="10dp"
             android:textSize="15sp"
+            android:textColor="#F7F9FD"
             android:layout_marginHorizontal="0dp"
             android:layout_marginTop="30dp"
             android:id="@+id/etfirst_name"
             android:singleLine="true"
-            android:background="@drawable/loginbuttons"
-            />
+            android:background="@drawable/loginbuttons"/>
         <EditText
             android:id="@+id/etlast_name"
             android:layout_width="62dp"
@@ -62,6 +59,7 @@
             android:background="@drawable/loginbuttons"
             android:padding="10dp"
             android:textSize="15sp"
+            android:textColor="#F7F9FD"
             android:layout_weight="1"
             android:layout_marginHorizontal="5dp"
             android:layout_marginTop="30dp"
@@ -74,6 +72,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:background="@drawable/loginbuttons"
+        android:textColor="#F7F9FD"
         android:drawableLeft="@drawable/ic_person_black_24dp"
         android:drawableEnd="@drawable/ic_person_black_24dp"
         android:drawableRight="@drawable/ic_person_black_24dp"
@@ -87,6 +86,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:background="@drawable/loginbuttons"
+        android:textColor="#F7F9FD"
         android:drawableLeft="@drawable/ic_email_black_24dp"
         android:drawableEnd="@drawable/ic_email_black_24dp"
         android:drawableRight="@drawable/ic_email_black_24dp"
@@ -100,6 +100,7 @@
         android:id="@+id/etPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="#F7F9FD"
         android:drawableLeft="@drawable/ic_lock_black_24dp"
         android:drawableRight="@drawable/ic_lock_black_24dp"
         android:drawableEnd="@drawable/ic_lock_black_24dp"
@@ -117,6 +118,7 @@
         android:id="@+id/etconfirm_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="#F7F9FD"
         android:drawableLeft="@drawable/ic_lock_black_24dp"
         android:drawableRight="@drawable/ic_lock_black_24dp"
         android:drawableEnd="@drawable/ic_lock_black_24dp"
@@ -134,7 +136,7 @@
         android:layout_width="212dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="100dp"
         android:background="@drawable/loginbuttons"
         android:text="Next"
         android:textAllCaps="false"
