--- a/app/src/main/res/layout/selected__field.xml
+++ b/app/src/main/res/layout/selected__field.xml
@@ -131,14 +131,29 @@
             android:textColor="#F0F2F5"
             android:textSize="20sp" />
     </RadioGroup>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="20dp">
+
     <Button
         android:id="@+id/bselectedNext"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="50dp"
-        android:text="Next"
+        android:text="gym trainer"
         android:textAllCaps="false" />
+
+    <Button
+        android:id="@+id/bselectedNext1"
+        android:layout_width="120dp"
+        android:layout_marginLeft="150dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Period tracker"
+        android:textAllCaps="false" />
+    </LinearLayout>
 
 
 
