--- a/app/src/main/res/layout/login_screen.xml
+++ b/app/src/main/res/layout/login_screen.xml
@@ -63,33 +63,33 @@
             android:padding="10dp"
             android:src="@mipmap/google_image" />
     -->
-    <Button
+
+    <com.google.android.gms.common.SignInButton
         android:id="@+id/bgoogle"
         android:layout_width="match_parent"
-        android:layout_height="58dp"
+        android:layout_height="44dp"
         android:layout_gravity="center"
         android:layout_marginLeft="60dp"
         android:layout_marginTop="60dp"
         android:layout_marginRight="60dp"
         android:drawableLeft="@mipmap/google"
-        android:text="Sign in with Google"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textSize="18dp" />
 
-    <Button
+    <com.facebook.login.widget.LoginButton
         android:id="@+id/bfacebook"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="44dp"
         android:layout_gravity="center"
         android:layout_marginLeft="60dp"
-        android:layout_marginTop="3dp"
+        android:layout_marginTop="5dp"
         android:layout_marginRight="60dp"
         android:drawableLeft="@mipmap/facebook"
-        android:text="Sign in with facebook"
         android:textAlignment="center"
         android:textAllCaps="false"
-        android:textSize="18dp" />
+        android:textSize="18dp"
+        android:visibility="visible" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -118,11 +118,5 @@
             android:textSize="20sp"
             android:textStyle="bold" />
     </LinearLayout>
-
-
-
-
-
-
 </LinearLayout>
 
