--- a/app/src/main/res/layout/login_screen.xml
+++ b/app/src/main/res/layout/login_screen.xml
@@ -65,7 +65,7 @@
     -->
 
     <com.google.android.gms.common.SignInButton
-        android:id="@+id/bgoogle"
+        android:id="@+id/GoogleSignInBtn"
         android:layout_width="match_parent"
         android:layout_height="44dp"
         android:layout_gravity="center"
