--- a/app/src/main/res/layout/body_info.xml
+++ b/app/src/main/res/layout/body_info.xml
@@ -17,18 +17,20 @@
         />
 
     <ImageView
-        android:layout_width="265dp"
-        android:layout_height="601dp"
+        android:layout_width="243dp"
+        android:layout_height="630dp"
         android:layout_gravity="center"
         android:src="@mipmap/manimage" />
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Thin legs"
-        android:textAllCaps="false"
-        android:textAlignment="center"
-        android:layout_gravity="right"
-        android:layout_marginTop="500dp"/>
+
+    <ToggleButton
+        android:id="@+id/toggle"
+        android:layout_width="216dp"
+        android:layout_height="154dp"
+        android:layout_gravity="bottom|right"
+        android:layout_marginBottom="130dp"
+        android:background="@null"
+        android:button="@drawable/check" />
+
 
    <!-- <ImageView
         android:layout_width="204dp"
