--- a/app/src/main/res/layout/personal_info.xml
+++ b/app/src/main/res/layout/personal_info.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Personal_info"
+    tools:context=".userDataInput.Personal_info"
     android:orientation="vertical"
     android:padding="16dp"
     android:background="@mipmap/background">
