--- a/app/src/main/res/layout/health__info.xml
+++ b/app/src/main/res/layout/health__info.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Health_Info"
+    tools:context=".userDataInput.Health_Info"
     android:orientation="vertical"
     android:padding="16dp"
     android:background="@mipmap/background02">
