--- a/app/src/main/res/layout/period_info.xml
+++ b/app/src/main/res/layout/period_info.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Period_info"
+    tools:context=".userDataInput.Period_info"
     android:orientation="vertical"
     android:background="@mipmap/background02">
 
