--- a/app/src/main/res/layout/selected__field.xml
+++ b/app/src/main/res/layout/selected__field.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Selected_Field"
+    tools:context=".userDataInput.Selected_Field"
     android:orientation="vertical"
     android:background="@mipmap/background02">
 
@@ -16,42 +16,11 @@
         android:textColor="#F7F9FC"
         android:padding="16sp"
         android:textAlignment="center"
+        android:layout_marginBottom="40dp"
         android:layout_marginTop="30dp"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Please select any one field"
-        android:textColor="#F7F9FC"
-        android:textSize="20sp"
-        android:layout_marginTop="65dp"
-        android:layout_marginLeft="20dp"/>
 
-    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
 
-    <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:layout_marginLeft="12dp"
-            android:layout_marginRight="10dp"
-            android:text="Gym Trainer"
-            android:textColor="#F6F7F8"
-            android:textSize="20sp"
-        android:layout_marginTop="10dp"/>
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Period Tracker"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:textColor="#F6F7F8"
-            android:textSize="20sp"
-            android:layout_marginTop="10dp"/>
-    </RadioGroup>
+
         <Switch
         android:id="@+id/switch1Btn"
         android:layout_width="wrap_content"
