--- a/app/src/main/res/layout/body_info.xml
+++ b/app/src/main/res/layout/body_info.xml
@@ -4,42 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".userDataInput.Body_Info">
-    <TextView
+    tools:context=".BodyInfo"
+    android:orientation="vertical"
+    android:background="@mipmap/manbodyimage">
+
+    <Button
+        android:id="@+id/btnNext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Please Choose your problem areas"
-        android:textColor="#000000"
-        android:textAlignment="center"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:layout_marginTop="50dp"
         />
-
-    <ImageView
-        android:layout_width="243dp"
-        android:layout_height="630dp"
-        android:layout_gravity="center"
-        android:src="@mipmap/manimage" />
-
-    <ToggleButton
-        android:id="@+id/toggle"
-        android:layout_width="216dp"
-        android:layout_height="154dp"
-        android:layout_gravity="bottom|right"
-        android:layout_marginBottom="130dp"
-        android:background="@null"
-        android:button="@drawable/check" />
-    
-
-
-   <!-- <ImageView
-        android:layout_width="204dp"
-        android:layout_height="233dp"
-        android:layout_gravity="center_vertical|right"
-        android:layout_marginTop="120dp"
-        android:src="@mipmap/thinlegs" />
-
--->
 
 </FrameLayout>
