--- a/app/src/main/res/layout/selected__field.xml
+++ b/app/src/main/res/layout/selected__field.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".userDataInput.Selected_Field"
+    tools:context=".Selected_Field"
     android:orientation="vertical"
     android:background="@mipmap/background02">
 
@@ -108,7 +108,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/bselectedNext"
+            android:id="@+id/BtnGym"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -117,7 +117,7 @@
             android:layout_marginLeft="70dp"/>
 
         <Button
-            android:id="@+id/bselectedNext1"
+            android:id="@+id/BtnPeriod"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
