--- a/app/src/main/res/layout/tracking_info.xml
+++ b/app/src/main/res/layout/tracking_info.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".userDataInput.Tracking_info"
+    tools:context=".Tracking_info"
     android:gravity="bottom"
     >
 
