--- a/app/src/main/res/layout/selected__field.xml
+++ b/app/src/main/res/layout/selected__field.xml
@@ -12,17 +12,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="How would you like to use this app for ?"
-        android:textSize="30sp"
+        android:textSize="25sp"
         android:textColor="#F7F9FC"
-        android:padding="16sp"
+        android:padding="16dp"
         android:textAlignment="center"
         android:layout_marginBottom="40dp"
-        android:layout_marginTop="30dp"/>
+        android:layout_marginTop="40dp"/>
 
-
-
-        <Switch
-        android:id="@+id/switch1Btn"
+      <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="   Gym Trainer       "
@@ -32,6 +29,7 @@
         android:layout_marginLeft="0dp"
         android:textAlignment="center"
         android:layout_gravity="center"
+          android:padding="10dp"
         android:drawableLeft="@drawable/ic_fitness_center_black02_24dp"/>
 
     <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
@@ -43,10 +41,10 @@
     <RadioButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15sp"
             android:text="Stay Fit "
             android:textColor="#F0F2F5"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:buttonTint="@drawable/radiobtncolor"/>
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -54,6 +52,7 @@
             android:textSize="20sp"
             android:textColor="#F0F2F5"
             android:layout_marginTop="5sp"
+            android:buttonTint="@drawable/radiobtncolor"
             />
         <RadioButton
             android:layout_width="wrap_content"
@@ -62,9 +61,10 @@
             android:textSize="20sp"
             android:textColor="#F0F2F5"
             android:layout_marginTop="5sp"
+            android:buttonTint="@drawable/radiobtncolor"
             />
     </RadioGroup>
-    <Switch
+   <TextView
         android:id="@+id/switch2Btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -75,6 +75,7 @@
         android:layout_marginLeft="10dp"
         android:textAlignment="center"
         android:layout_gravity="center"
+       android:padding="10dp"
         android:drawableLeft="@drawable/ic_local_florist_black_24dp"/>
 
 
@@ -87,10 +88,10 @@
     <RadioButton
             android:layout_width="215dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15sp"
             android:text="Trying to Conceive "
             android:textColor="#F0F2F5"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+        android:buttonTint="@drawable/radiobtncolor"/>
 
         <RadioButton
             android:layout_width="match_parent"
@@ -98,7 +99,8 @@
             android:layout_marginTop="5sp"
             android:text="Regular Tracker"
             android:textColor="#F0F2F5"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:buttonTint="@drawable/radiobtncolor"/>
     </RadioGroup>
 
     <LinearLayout
